	  Full support of ON_IOERROR
	  Full support of F77_UNFORMATTED.
	  Support for XDR I/O.
          Fixed positional index (value and dimension) returned by STREGEX.
	  HELP without parameters and keywords puts out a list of all local
	  variables as well as compiled procedures and functions.
	  Add support for PROCEDURES & FUNCTIONS keywords in HELP
	  Made GDL compile under x86_64 linux.
	  Fixed incompatibility with # operator and one-dim vectors.
	  Speedup for ^ operator for integer types.
	  Speedup (>100x!) for REVERSE_INDICES of HISTOGRAM.
	  Implement INPUT keyword in HISTOGRAM.
	  Support for non-rectangular (x,y 2d arrays) calls to SURFACE and CONTOUR.
	  Support for DICOM files (GDLffDICOM object).
	  INTEGER keyword for TOTAL.
	  Add support for variable-length VMS files.	  
	  Add support for CHANNEL keyword in TV/TVSCL.
	  Add support for TRUE/CHANNEL keywords in TVRD (X only)
	  Add support for DIMENSION keyword in FFT.
	  Add REGEX keyword support to STRTOK.
	  Add preliminary support for MPI.
	  Add initial support for SOCKET.
	  Preliminary support for map projections. (requires libproj4 from
	  (http://members.verizon.net/~vze2hc4d/proj4/lbp4_050319S.tar.gz)
          Add initial support for BESELI, BESELJ, BESELK and BESELY but only for
	  integer order due to limitations of GSL Bessel functions
	  Added Erf() [and Errorf() for compatibility], Erfc(), Expint(), Gaussint().
	  Fixed I/O of Gamma(), Igamma(), LnGamma() and Beta().
	  Added Erf() [and Errorf() for compatibility], Erfc(), Expint(), Gaussint()
	  Fixed I/O of Gamma(), Igamma(), LnGamma() and Beta()
	  +-Inf now managed in MIN and MAX (if called with /Nan)
	  NaN and +-Inf now properly managed in PLOT, OPLOT, PLOTS
	  Speedup in PLOT, OPLOT, PLOTS for large data sets (see test_plot_benchmark.pro)
	  Add 6 linestyles (via !p.linestyle or keyword) for PLOT, OPLOT, PLOTS
	  Improved memory management.
	  Improved new implementation of struct arrays.