@@ -22,6 +22,7 @@
 #include <memory>
 #include <set>
 
+#include <sys/stat.h>
 #include <sys/types.h>
 #include <sys/wait.h>
 
@@ -524,6 +525,41 @@ namespace lib {
   
   void exitgdl( EnvT* e)
   {
+
+#ifdef HAVE_LIBREADLINE
+
+    // we manage the ASCII "history" file (located in ~/.gdl/)
+    // we do not manage NOW the number of lines we save,
+    // this should be limited by "history/readline" itself
+    
+    // Create eventually the ".gdl" path in user $HOME
+    int result, debug=0;
+    char *homeDir = getenv( "HOME");
+    string pathToGDL_history;
+    pathToGDL_history=homeDir;
+    AppendIfNeeded(pathToGDL_history, "/");
+    pathToGDL_history=pathToGDL_history+".gdl";
+    // Create eventially the ".gdl" path in Home
+    result=mkdir(pathToGDL_history.c_str(), 0700);
+    if (debug)
+      { if (result == 0) { cout << "Creation of ~/.gdl PATH "<< endl;}
+      else {cout << "~/.gdl PATH was still here "<< endl;}
+      }
+    
+    // (over)write the history file in ~/.gdl PATH
+  
+    string history_filename;
+    AppendIfNeeded(pathToGDL_history, "/");
+    history_filename=pathToGDL_history+"history";
+    if (debug) cout << "History file name: " <<history_filename << endl;
+    result=write_history(history_filename.c_str());
+    if (debug) 
+      { if (result == 0) {cout<<"Successfull writing of ~/.gdl/history"<<endl;}
+      else {cout <<"Fail to write ~/.gdl/history"<<endl;}
+      }
+
+#endif
+
     BaseGDL* status=e->GetKW( 1);
     if( status == NULL) exit( EXIT_SUCCESS);
     
