@@ -188,3 +188,5 @@
 	  Add 6 linestyles (via !p.linestyle or keyword) for PLOT, OPLOT, PLOTS
 	  Improved memory management.
 	  Improved new implementation of struct arrays.
+	  Managment of an history (ASCII) file save in ~/.gdl/history (with memory of previous sessions)
+
